[package]
name = "gossiping_peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = "0.17.1"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
tungstenite = "0.17.2"
clap = { version = "3.1.6", features = ["derive"] }
url = "2.2.2"
itertools = "0.10.3"
